fixed broken vertical alignment, only issue is random resizing of logo

--- a/17/css/custom.css
+++ b/17/css/custom.css
@@ -41,10 +41,10 @@ h3.brand {
 .image-bg .btn.btn-filled, .image-bg .btn-filled:visited {
   border-color: #8da1cd;
 }
-.acm, .footer {
+.acm, .social_info {
   padding-top: 25px;
 }
-.footer i {
+.social_info i {
   font-size: 24px;
 }
 .social_icon {
